Fixed scroll padding so it can work on iOS
Made homeWorks have +margin-top and homeIntro have -margin-bottom

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html {
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
-    scroll-padding: 90px;
 }
 
 body {
@@ -133,6 +132,7 @@ footer > h5 {
     height: 550px;
     color: #f4f4f4;
     font-size: 35px;
+    margin-bottom: -90px;
 }
 
 .homeIntro > p {
@@ -155,6 +155,7 @@ footer > h5 {
     background-color: rgba(244, 244, 244, 0.9);
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 90px;
 }
 
 .works {
@@ -759,7 +760,7 @@ footer > h5 {
     .cherryCards {
         height: 320px;
     }
-    
+
     .imageCaption {
         width: 730px;
     }
@@ -785,10 +786,6 @@ footer > h5 {
 }
 
 @media screen and (max-width: 768px) {
-    html {
-        scroll-padding: 76px;
-    }
-
     footer {
         align-items: center;
         justify-content: space-between;
@@ -817,7 +814,7 @@ footer > h5 {
     .homeIntro {
         font-size: 28px;
         left: 10px;
-        width: calc(100% - 75px);
+        width: 520px;
         height: 530px;
     }
 
@@ -1004,10 +1001,6 @@ footer > h5 {
 }
 
 @media screen and (max-width: 550px) {
-    html {
-        scroll-padding: 75px;
-    }
-
     nav {
         height: 80px;
     }
@@ -1025,10 +1018,15 @@ footer > h5 {
         font-size: 23px;
         width: 400px;
         height: 500px;
+        margin-bottom: -80px;
     }
 
     .homeIntro > p {
         line-height: 42px;
+    }
+
+    .homeWorks {
+        margin-top: 80px;
     }
 
     .works {
@@ -1323,10 +1321,6 @@ footer > h5 {
 }
 
 @media screen and (max-width: 375px) {
-    html {
-        scroll-padding: 80px;
-    }
-
     nav > h3 {
         font-size: 32px;
         width: 240px;
@@ -1429,7 +1423,7 @@ footer > h5 {
         margin-left: 0px;
         margin-right: 0px;
     }
-    
+
     .projectTitleText {
         position: relative;
         left: -20px;
@@ -1445,10 +1439,6 @@ footer > h5 {
 }
 
 @media screen and (max-width: 320px) {
-    html {
-        scroll-padding: 70px;
-    }
-
     nav {
         height: 70px;
     }
@@ -1468,6 +1458,11 @@ footer > h5 {
         width: 290px;
         height: 505px;
         left: 0px;
+        margin-bottom: -70px;
+    }
+
+    .homeWorks {
+        margin-top: 70px;
     }
 
     .works {
